Fix hero main text alignment

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
+    margin-bottom: 0;
 }
 
 .hero {
